--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,9 @@ height:100%;
 .searchbar .SearchBar-searchContainer-8{
   height:100%;
 }
+.searchbar .jss1 .jss8, .searchbar .jss1 .jss7{
+  height:100%;
+}
 .searchbar .SearchBar-input-7{
   height:100%;
 }
